--- a/restful-laravel-api-tutorial1/composer.json
+++ b/restful-laravel-api-tutorial1/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
@@ -48,6 +49,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "test": [
+            "vendor/bin/phpunit"
         ]
     },
     "config": {
